--- a/info.html
+++ b/info.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guest Information - À la Maison Boutique Guesthouse</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style-06-18.css">
 </head>
 
 <body>
@@ -29,11 +29,121 @@
     </header>
     <main>
         <div class="container">
+            <h2>Guest Information</h2>
             <div class="responsive">
                 <div>
-                    <h2>Guest Information</h2>
+                    <p class="embiggen_first">We're glad you're staying with us! To ensure a comfortable and enjoyable
+                        stay for all guests,
+                        we kindly request that you familiarize yourself with the following guidelines.</p>
+                    <div class="info_section">
+                        <b>Payment Policy</b>
+                        <ul class="list_margins">
+                            <li>Deposits to be paid 12 hours from receipt of invoice to confirm booking.</li>
+                            <li>No bookings are guaranteed until reservation is confirmed by payment of a deposit. All
+                                online bookings are subject to an e-mail confirmation.</li>
+                            <li>100% of booking fees 14 days or less prior to arrival.</li>
+                            <li>50% deposit of booking fees 15 days or more prior to arrival and the balance with
+                                check-in.</li>
+                            <li>Please email proof of payment to <a
+                                    href="mailto:info@alamaisonparys.co.za">info@alamaisonparys.co.za</a></li>
+                        </ul>
+                    </div>
+                    <div class="info_section">
+                        <b>Refunds / Cancellations</b>
+                        <ul class="list_margins">
+                            <li>Please note that all bookings are non-refundable. However, we are happy to offer a
+                                booking transfer to a later date, subject to availability, with a validity period of 12
+                                months from the original booking date.</li>
+                            <li>Please be aware that our booking transfer policy is subject to certain terms and
+                                conditions, particularly during peak seasons that require a minimum stay.
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="info_section">
+                        <b>Guest Liability</b>
+                        <ul class="list_margins">
+                            <li>We kindly remind our guests that they are responsible for any damage or loss caused to
+                                our property, whether by act, omission, default, accident, or neglect. By booking with
+                                us, you agree to indemnify us and pay for any reasonable costs incurred to repair or
+                                rectify such damage.</li>
+                            <li>Please note that this does not include normal wear and tear. In the event of any
+                                accidents or incidents resulting in property damage, please report them to management
+                                promptly.</li>
+                        </ul>
+                    </div>
+                    <div class="info_section">
+                        <b>Check-in / Check-out Times</b>
+                        <ul class="list_margins">
+                            <li>Our standard check-in time is 2 PM, but we'll do our best to accommodate your
+                                early or late arrival if you let us know in advance.</li>
+                            <li>If you need to drop off your luggage before check-in, we're happy to store it for you.
+                            </li>
+                            <li>Check-out is by 10 AM.</li>
+                        </ul>
+                    </div>
+                    <div class="info_section">
+                        <b>Room Keys</b>
+                        <ul class="list_margins">
+                            <li>Upon arrival, room keys will be handed over to guests after payment and administration.
+                                Special arrangements for key collection must be made in advance for late arrivals.</li>
+                            <li>Upon departure, please return room keys to Management before leaving. If your departure
+                                is very early, please arrange with Management in advance.</li>
+                            <li>During long-term stays, guests must lock their rooms when leaving and keep their keys
+                                for the duration of their stay.</li>
+                            <li>Lost or damaged keys will incur a replacement cost of R500, while damaged locks will
+                                incur a replacement cost of R800, payable immediately.</li>
+                        </ul>
+                    </div>
+                    <div class="info_section">
+                        <b>Security</b>
+                        <ul class="list_margins">
+                            <li>Please note that management is not responsible for lost items; always lock your doors
+                                when leaving.</li>
+                            <li>While we take responsible steps to ensure the safety and security of all
+                                guests and their possessions, guests retain final responsibility for their own safety
+                                and security.</li>
+                            <li>Keep rooms locked at all times when absent.</li>
+                        </ul>
+                    </div>
+                    <div class="info_section">
+                        <b>Children and Pets</b>
+                        <ul class="list_margins">
+                            <li>Children and pets are welcome by prior arrangement. Please contact us in advance to
+                                discuss your requirements and ensure a comfortable stay for all.</li>
+                        </ul>
+                    </div>
+                    <div class="info_section">
+                        <b>Parking</b>
+                        <ul class="list_margins">
+                            <li>Free parking is available on the premises for all guests.</li>
+                            <li>Ensure you close the gates, as they do not close automatically after a few seconds.</li>
+                            <li>Do not leave valuables inside your vehicle.</li>
+                        </ul>
+                    </div>
                 </div>
+                <aside>
+                    <b>Guesthouse Etiquette</b>
+                    <div class="smaller_font">
+                        <p>Please help us keep our home clean and tidy. We appreciate your consideration!</p>
+                        <ul class="list_margins">
+                            <li>Remove muddy shoes/boots before entering the guest house.</li>
+                            <li>Use the facecloth provided for removing makeup, and spare our linen and towels.</li>
+                            <li>Hang the shower curtain in the bath when using the shower.</li>
+                            <li>Please don't hang bath towels over shower curtain rails or glass partitions.</li>
+                            <li>Enjoy your meals in our dining room, braai area, or tea garden; eating in rooms
+                                (especially in beds) is not permitted.</li>
+                            <li>Smoking is strictly forbidden inside the guest house; please smoke in areas with
+                                designated ashtrays only.</li>
+                            <li>Refrain from using towels, facecloths, or linen to clean shoes.</li>
+                            <li>Don't latch the front door with the slide or chain, as other guests need access.</li>
+                            <li>Please switch off the TV and all electric appliances when leaving your room.</li>
+                            <li>Kindly use the luggage caddy provided for your suitcases/bags, not the beds.</li>
+                            <li>Only booked-in guests are allowed in the guest house.</li>
+                        </ul>
+                    </div>
             </div>
+            </aside>
+        </div>
         </div>
     </main>
     <footer>
