--- a/rooms.html
+++ b/rooms.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Rooms - À la Maison Boutique Guesthouse</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style-06-18.css">
 </head>
 
 <body>
@@ -92,7 +92,8 @@
                             </div>
                         </div>
                         <br />
-                        <p>Victorian charm with open plan bathroom. Door to private garden.</p>
+                        <p>Victorian charm featuring an open plan bathroom with bath and shower. Door to private garden.
+                        </p>
                     </section>
                     <section class="room">
                         <div class="rate_row">
@@ -121,7 +122,7 @@
                             </div>
                         </div>
                         <br />
-                        <p>Romantic antique interior with standing bath in private bathroom.</p>
+                        <p>Romantic antique interior with a standing bath in private bathroom.</p>
                     </section>
                     <section class="room">
                         <div class="rate_row">
@@ -150,7 +151,7 @@
                             </div>
                         </div>
                         <br />
-                        <p>Romantic French flair with private outdoor patio.</p>
+                        <p>Romantic French flair with a shower in the bathroom. Features private outdoor patio.</p>
                     </section>
                     <section class="room">
                         <div class="rate_row">
@@ -179,7 +180,7 @@
                             </div>
                         </div>
                         <br />
-                        <p>Romantic French flair with private outdoor patio.</p>
+                        <p>Romantic French flair with a shower in the bathroom. Features private outdoor patio.</p>
                     </section>
                     <script src="scripts/gallery.js" defer></script>
                     <p class="embiggen_first">We are pleased to offer special discounts for midweek bookings, single
@@ -199,22 +200,26 @@
                     <div class="smaller_font">
                         <p>Please enjoy the following provided in all our rooms.</p>
                         <ul class="list_margins">
+                            <li>Queen-size bed with Egyptian cotton linen</li>
                             <li>En-suite bathroom</li>
-                            <li>Airconditioning</li>
-                            <li>Mini refrigerator</li>
-                            <li>Television and select DStv channels</li>
+                            <li>Airconditioning and heating</li>
                             <li>Free WiFi</li>
+                            <li>TV and selected channels</li>
+                            <li>Hairdryer and towels</li>
+                            <li>Mini refrigerator</li>
                             <li>Tea / Coffee station</li>
+                            <li>Personal safe</li>
+                            <li>Welcome glass of sherry</li>
                         </ul>
                     </div>
                     <br />
-                    <p><b>Guesthouse Facilities</b></p>
+                    <p><b>Common Guesthouse Facilities</b></p>
                     <div class="smaller_font">
                         <p>We also offer the following facilities for your comfort and peace of mind.</p>
                         <ul class="list_margins">
                             <li>Secure parking</li>
                             <li>Backup power</li>
-                            <li>Secluded gardens</li>
+                            <li>Secluded gardens and outdoor seating</li>
                             <li>Lounge with fireplace</li>
                             <li>Braai facilities</li>
                             <li>Outdoor splash pool</li>
