--- a/activities.html
+++ b/activities.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Activity Packages - À la Maison Boutique Guesthouse</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style-06-18.css">
 </head>
 
 <body>
