--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us - À la Maison Boutique Guesthouse</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style-06-18.css">
 </head>
 
 <body>
@@ -41,6 +41,7 @@
                             href="mailto:info@alamaisonparys.co.za">info@alamaisonparys.co.za</a></div>
                     <div class="contact_row2"><b>Address:</b> 7 Kruis Street, Parys, Free State, 9585, South Africa
                     </div>
+                    <div class="contact_row2"><b>GPS:</b> 26°53'57.2"S, 27°27'10.7"E</div>
 
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d839.608138005031!2d27.452484091389294!3d-26.899205648531705!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xc7afca4e6fc0d672!2s%C3%80+la+Maison+Guest+Accommodation!5e0!3m2!1sen!2s!4v1473658910326"
