--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>À la Maison Boutique Guesthouse</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style-06-18.css">
     <meta name="description"
         content="À la Maison Boutique Guesthouse offers luxury and serenity in Parys, combining Victorian-style elegance with modern comfort and convenience.">
     <meta name="keywords"
